Finished main code. Began work on test class.